Added docker file

--- a/Directory Structure.css
+++ b/Directory Structure.css
@@ -6,5 +6,7 @@ project/
 │   └──preprocessing.py
 │   └──model.py
 │   └──main.py
+├── Inference
+│   └──Inference.py
 ├── requirements.txt
 └── setup_environment.sh
